Fix button alignment in firefox.
We should be forced to include the vertical-align statement anyway,
but Chrome is extremely forgiving.

--- a/app/assets/stylesheets/_forms.css.scss
+++ b/app/assets/stylesheets/_forms.css.scss
@@ -138,6 +138,7 @@ fieldset {
     color:#fff;
     height:27px;
     line-height:26px;
+    vertical-align: top;
     margin:0 0 0 7px;
     padding:0 14px 2px 20px;
     
@@ -403,4 +404,4 @@ input[type=submit] {
 .activities-section .form-holder heading {
   margin:0 1px 10px 0;
 }
-*/
+*/  
